docs(script): update script to config theme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "references": [],
   "files": [],
   "include": [
-    "docs/.vuepress/**/*",
+    "blog/.vuepress/**/*",
     "**/*.ts",
     "**/*.vue",
   ]
