--- a/blog/.vuepress/configs/docSearch/docSearchConfig.json
+++ b/blog/.vuepress/configs/docSearch/docSearchConfig.json
@@ -10,12 +10,12 @@
       "global": true,
       "default_value": "Documentation"
     },
-    "lvl1": ".theme-default-content h1",
-    "lvl2": ".theme-default-content h2",
-    "lvl3": ".theme-default-content h3",
-    "lvl4": ".theme-default-content h4",
-    "lvl5": ".theme-default-content h5",
-    "text": ".theme-default-content p, .theme-default-content li",
+    "lvl1": ".theme-container h1",
+    "lvl2": ".theme-container h2",
+    "lvl3": ".theme-container h3",
+    "lvl4": ".theme-container h4",
+    "lvl5": ".theme-container h5",
+    "text": ".theme-container p, .theme-container li",
     "lang": {
       "selector": "/html/@lang",
       "type": "xpath",
