--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "workspaces": [
     "packages/*"
   ],
-  "version": "1.0.2",
-  "name": "renovamen-blog",
-  "description": "Renovamen's blog, powered by VuePress 2, themed by Gungnir.",
+  "name": "qbenben-blog",
+  "description": "qbenben's blog.",
   "license": "Apache-2.0",
-  "author": "Renovamen <renovamenzxh@gmail.com>",
+  "author": "Qbenben <1074059947@qq.com>",
   "scripts": {
     "clean": "rimraf blog/.vuepress/.temp blog/.vuepress/.cache dist",
     "dev": "vuepress dev blog --clean-cache",
@@ -20,7 +19,6 @@
     "vuepress-theme-gungnir": "2.0.0-alpha.7"
   },
   "devDependencies": {
-    "@vuepress/plugin-docsearch": "2.0.0-beta.32",
     "anywhere": "^1.5.0",
     "lerna": "^4.0.0",
     "rimraf": "^3.0.2",
