--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "markdown-it-task-lists": "^2.1.1",
-    "vuepress-theme-gungnir": "2.0.0-alpha.7"
+    "vuepress-theme-gungnir": "2.0.0-alpha.8"
   },
   "devDependencies": {
     "anywhere": "^1.5.0",
@@ -24,6 +24,7 @@
     "rimraf": "^3.0.2",
     "vuepress": "^2.0.0-beta.31",
     "vuepress-vite": "2.0.0-beta.31",
-    "vuepress-webpack": "2.0.0-beta.31"
+    "vuepress-webpack": "2.0.0-beta.31",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.29"
   }
 }
