--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "vuepress-theme-gungnir": "2.0.0-alpha.8"
   },
   "devDependencies": {
+    "@vuepress/plugin-docsearch": "2.0.0-beta.29",
+    "@vuepress/plugin-pwa": "^2.0.0-beta.32",
+    "@vuepress/plugin-pwa-popup": "^2.0.0-beta.32",
     "anywhere": "^1.5.0",
     "lerna": "^4.0.0",
     "rimraf": "^3.0.2",
     "vuepress": "^2.0.0-beta.31",
     "vuepress-vite": "2.0.0-beta.31",
-    "vuepress-webpack": "2.0.0-beta.31",
-    "@vuepress/plugin-docsearch": "2.0.0-beta.29"
+    "vuepress-webpack": "2.0.0-beta.31"
   }
 }
