--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf blog/.vuepress/.temp blog/.vuepress/.cache dist",
     "dev": "vuepress dev blog --clean-cache",
     "build": "yarn clean && vuepress build blog --clean-cache --dest dist",
+    "docs:dev": "vuepress dev blog --clean-cache",
     "docs:build": "yarn clean && vuepress build blog --clean-cache --dest dist",
     "serve": "anywhere -h localhost -d dist"
   },
@@ -23,6 +24,7 @@
     "@vuepress/plugin-pwa": "^2.0.0-beta.32",
     "@vuepress/plugin-pwa-popup": "^2.0.0-beta.32",
     "anywhere": "^1.5.0",
+    "cpx2": "^4.1.2",
     "lerna": "^4.0.0",
     "rimraf": "^3.0.2",
     "vuepress": "^2.0.0-beta.31",
