chore(plugin-docsearch): update doc search config

--- a/blog/.vuepress/configs/docSearch/docSearchConfig.json
+++ b/blog/.vuepress/configs/docSearch/docSearchConfig.json
@@ -16,7 +16,8 @@
     },
     "lvl1": ".theme-container h1",
     "lvl2": ".theme-container h2",
-    "lvl4": "dt",
+    "lvl3": ".theme-container h3",
+    "lvl4": ".theme-container dt",
     "lang": {
       "selector": "/html/@lang",
       "type": "xpath",
