--- a/.x-cmd/build
+++ b/.x-cmd/build
@@ -57,21 +57,20 @@ build_docSearch() {
 	docker run -it --env-file=.env -e "CONFIG=$(cat "${DOC_SEARCH_CONFIG_FILE}" | x jq -r tostring)" algolia/docsearch-scraper
 }
 
-build_baiduCollect() {
-	local BAIDU_TOKEN
-	BAIDU_TOKEN="$(cat "$WORK_DIR/.env" | grep 'BAIDU_TOKEN')"
-	local TOKEN="${BAIDU_TOKEN#*=}"
-	[ -z "$TOKEN" ] && return 0
-	curl -H 'Content-Type:text/plain' --data-binary @urls.txt "http://data.zz.baidu.com/urls?site=$WEB_SIT&token=$TOKEN"
-}
-
 build_theme() {
-  	cd "$WORK_DIR/vuepress-theme-gungnir/packages/theme/" &&
+  cd "$WORK_DIR/vuepress-theme-gungnir/packages/theme/" &&
 	yarn clean &&
 	yarn build &&
 	yarn copy &&
 	cp -r "$WORK_DIR/vuepress-theme-gungnir/packages/theme/lib" "$WORK_DIR/node_modules/vuepress-theme-gungnir"
 	cd "$WORK_DIR" || exit
+}
+
+is_need_search_collect() {
+	ui prompt "$(ui bold green 'Is need to remove node_modules (y/N)')" _IS_NEED
+	if [ "$_IS_NEED" = 'y' ] || [ "$_IS_NEED" = 'Y' ] ;then
+		x collect
+	fi
 }
 # EndSection
 
@@ -80,7 +79,7 @@ case "${1}" in
 	plugin) 								build_plugin 																	;;
 	clean) 									clean_plugin 																	;;
 	theme) 									build_theme																		;;
-	search|docSearch)				build_docSearch && build_baiduCollect 				;;
+	search|docSearch)				build_docSearch && is_need_search_collect 		;;
 	doc|*)									build_doc																			;;
 esac
 # EndSection
