--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "./tsconfig.base.json",
-  "references": [],
+  "references": [
+    { "path": "./packages/china-search-console/tsconfig.build.json" },
+    { "path": "./packages/clipboard/tsconfig.build.json" },
+  ],
   "files": [],
   "include": [
     "blog/.vuepress/**/*",
