--- a/package.json
+++ b/package.json
@@ -16,19 +16,17 @@
     "serve": "anywhere -h localhost -d dist"
   },
   "dependencies": {
-    "vuepress-theme-gungnir": "^2.0.0-alpha.9"
+    "vuepress-theme-gungnir": "2.0.0-alpha.13"
   },
   "devDependencies": {
-    "@vuepress/plugin-docsearch": "2.0.0-beta.29",
     "anywhere": "^1.5.0",
     "cpx2": "^4.1.2",
     "lerna": "^4.0.0",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-task-lists": "^2.1.1",
     "rimraf": "^3.0.2",
-    "sitemap": "^7.1.0",
-    "vuepress": "^2.0.0-beta.31",
-    "vuepress-vite": "2.0.0-beta.31",
-    "vuepress-webpack": "2.0.0-beta.31"
+    "vuepress": "^2.0.0-beta.35",
+    "vuepress-vite": "2.0.0-beta.35",
+    "vuepress-webpack": "2.0.0-beta.35"
   }
 }
