--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "build": "yarn clean && vuepress build blog --clean-cache --dest dist",
     "docs:dev": "vuepress dev blog --clean-cache",
     "docs:build": "yarn clean && vuepress build blog --clean-cache --dest dist",
-    "serve": "anywhere -h localhost -d dist"
+    "serve": "anywhere -h localhost -d dist",
+    "commit": "cz"
   },
   "dependencies": {
     "vuepress-theme-gungnir": "2.0.0-alpha.13"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
     "anywhere": "^1.5.0",
+    "cz-customizable": "^6.3.0",
     "cpx2": "^4.1.2",
     "lerna": "^4.0.0",
     "markdown-it-deflist": "^2.1.0",
@@ -28,5 +31,10 @@
     "vuepress": "^2.0.0-beta.35",
     "vuepress-vite": "2.0.0-beta.35",
     "vuepress-webpack": "2.0.0-beta.35"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   }
 }
