--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "anywhere": "^1.5.0",
-    "cz-customizable": "^6.3.0",
     "cpx2": "^4.1.2",
+    "cz-git": "^1.0.1",
     "lerna": "^4.0.0",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-task-lists": "^2.1.1",
@@ -34,7 +34,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-customizable"
+      "path": "node_modules/cz-git"
     }
   }
 }
