docs(blog): update docs footer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,6 @@
       "declaration-block-trailing-semicolon": null,
       "no-descending-specificity": null
     }
-  }
+  },
+  "markdown-toc.depthTo": 3
 }
