--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "docs:dev": "vuepress dev blog --clean-cache",
     "docs:build": "yarn clean && vuepress build blog --clean-cache --dest dist",
     "serve": "anywhere -h localhost -d dist",
+    "postinstall": "npx rimraf ./node_modules/@types/react",
     "commit": "git cz"
   },
   "dependencies": {
     "vuepress-theme-gungnir": "^2.0.0-alpha.19"
   },
   "devDependencies": {
-    "@vuepress/plugin-search": "^2.0.0-beta.36",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.36",
     "@commitlint/cli": "^13.2.1",
     "anywhere": "^1.5.0",
     "cpx2": "^4.2.0",
@@ -29,7 +30,7 @@
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-task-lists": "^2.1.1",
     "rimraf": "^3.0.2",
-    "vuepress": "^2.0.0-beta.36",
+    "vuepress": "2.0.0-beta.36",
     "vuepress-vite": "2.0.0-beta.35",
     "vuepress-webpack": "2.0.0-beta.35"
   },
