--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -2,7 +2,7 @@ name: Deploy Blog
 
 on:
   push:
-
+    branches: [ main ]
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -28,6 +28,9 @@ jobs:
 
       - uses: x-cmd/action@main
         with:
-          shellcode: xws test 
+          git_user: Zhengqbbb
+          git_email: 1074059947@qq.com
+          ssh_key: '${{ secrets.ssh_key }}'
+          shellcode: xws test nice
   
     
