ci(blog): :wrench: update deploy workflow use x-cmd shell do

--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -38,6 +38,6 @@ jobs:
           git_user: Zhengqbbb
           git_email: 1074059947@qq.com
           ssh_key: '${{ secrets.ssh_key }}'
-          shellcode: xws deploy
+          code: xws deploy
   
     
