--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -4,33 +4,22 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ ubuntu-latest ]
         node: [ 14 ]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Node ${{ matrix.os }}
         uses: actions/setup-node@v3
         with:
            node-version: ${{ matrix.node }}
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Handle yarn cache
-        uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ matrix.node }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ matrix.node }}-yarn-
-            ${{ runner.os }}-node-
+           cache: yarn
 
       - name: 🔖 Run Deploy Script 🔖
         uses: x-cmd/action@main
