--- a/package.json
+++ b/package.json
@@ -1,42 +1,48 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "name": "qbenben-blog",
   "description": "qbenben's blog.",
   "license": "Apache-2.0",
   "author": "Qbenben <zhengqbbb@gmail.com>",
   "scripts": {
-    "clean": "rimraf blog/.vuepress/.temp blog/.vuepress/.cache dist",
-    "dev": "vuepress dev blog --clean-cache",
-    "build": "yarn clean && vuepress build blog --clean-cache --dest dist",
-    "docs:dev": "vuepress dev blog --clean-cache",
-    "docs:build": "yarn clean && vuepress build blog --clean-cache --dest dist",
-    "serve": "anywhere -h localhost -d dist",
-    "postinstall": "npx rimraf ./node_modules/@types/react",
-    "commit": "git cz"
-  },
-  "dependencies": {
-    "vuepress-theme-gungnir": "2.0.0-alpha.21"
+    "build": "pnpm build:all && pnpm build:copy",
+    "build:all": "pnpm -r --stream build",
+    "build:copy": "pnpm --parallel --stream copy",
+    "clean": "pnpm --parallel --stream clean",
+    "dev": "concurrently \"tsc -b tsconfig.build.json --watch\" \"pnpm run dev:copy\"",
+    "dev:copy": "pnpm build:copy --watch",
+    "docs:build": "pnpm --filter=blog docs:build",
+    "docs:clean": "pnpm --filter=blog docs:clean",
+    "docs:dev": "pnpm --filter=blog docs:dev",
+    "docs:serve": "pnpm --filter=blog docs:serve"
   },
   "devDependencies": {
-    "@vuepress/plugin-docsearch": "2.0.0-beta.38",
-    "@commitlint/cli": "^13.2.1",
-    "anywhere": "^1.5.0",
+    "@types/webpack-env": "^1.16.4",
+    "bumpp": "^7.1.1",
     "cpx2": "^4.2.0",
-    "cz-git": "^1.2.1",
-    "lerna": "^4.0.0",
-    "markdown-it-deflist": "^2.1.0",
-    "markdown-it-task-lists": "^2.1.1",
+    "cz-git": "^1.3.2",
+    "concurrently": "^7.2.0",
     "rimraf": "^3.0.2",
-    "vuepress": "2.0.0-beta.39",
-    "vuepress-vite": "2.0.0-beta.39",
-    "vuepress-webpack": "2.0.0-beta.38"
+    "typescript": "^4.6.4",
+    "vite": "~2.9.9"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-git"
+    }
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@algolia/client-search",
+        "@types/react",
+        "eslint-plugin-import",
+        "eslint-plugin-n",
+        "eslint-plugin-promise",
+        "react",
+        "react-dom",
+        "webpack"
+      ]
     }
   }
 }
