--- a/packages/clipboard/package.json
+++ b/packages/clipboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-clipboard",
-  "version": "1.0.8",
+  "version": "2.0.3",
   "description": "Vuepress2 plugin - code clipboard",
   "keywords": [
     "vuepress-plugin",
@@ -23,13 +23,20 @@
   "main": "lib/node/index.js",
   "types": "lib/node/index.d.ts",
   "scripts": {
-    "build": "tsc -b tsconfig.build.json && yarn copy",
+    "build": "pnpm clean && tsc -b tsconfig.build.json",
     "clean": "rimraf lib *.tsbuildinfo",
     "copy": "cpx \"src/**/*.{css,vue}\" lib"
   },
   "files": [
     "lib"
   ],
+  "dependencies": {
+    "@vuepress/client": "2.0.0-beta.45",
+    "@vuepress/core": "2.0.0-beta.45",
+    "@vuepress/utils": "2.0.0-beta.45",
+    "vue": "^3.2.33",
+    "vue-router": "^4.0.15"
+  },
   "publishConfig": {
     "access": "public"
   }
