--- a/packages/china-search-console/package.json
+++ b/packages/china-search-console/package.json
@@ -12,7 +12,7 @@
     "360-auto-push",
     "analytics"
   ],
-  "homepage": "https://www.qbenben.com/docs/play/vuepress-plugin-china-search-console.html",
+  "homepage": "https://blog.qbb.sh/docs/play/vuepress-plugin-china-search-console.html",
   "repository": {
     "type": "git",
     "url": "https://github.com/Zhengqbbb/zhengqbbb.github.io/tree/main/packages/china-search-console"
