--- a/packages/clipboard/package.json
+++ b/packages/clipboard/package.json
@@ -10,7 +10,7 @@
     "code-clipboard",
     "clipboard"
   ],
-  "homepage": "https://www.qbenben.com/docs/play/vuepress-plugin-clipboard",
+  "homepage": "https://blog.qbb.sh/docs/play/vuepress-plugin-clipboard",
   "repository": {
     "type": "git",
     "url": "https://github.com/Zhengqbbb/zhengqbbb.github.io/tree/main/packages/clipboard"
