--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-  "packageManager": "pnpm@7.4.0",
   "scripts": {
     "build": "vite-ssg build",
     "dev": "vite --port 3333 --open",
@@ -8,6 +7,12 @@
     "serve": "vite preview",
     "serve:https": "serve dist",
     "typecheck": "vue-tsc --noEmit"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git",
+      "czConfig": "./scripts/commitizen.cjs"
+    }
   },
   "dependencies": {
     "@vueuse/core": "^8.9.2",
@@ -30,6 +35,7 @@
     "@vue/test-utils": "^2.0.2",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
+    "cz-git": "^1.3.9",
     "eslint": "^8.19.0",
     "eslint-plugin-cypress": "^2.12.1",
     "https-localhost": "^4.7.1",
@@ -49,5 +55,6 @@
     "vite-ssg": "^0.20.2",
     "vite-ssg-sitemap": "^0.3.1",
     "vue-tsc": "^0.38.5"
-  }
+  },
+  "packageManager": "pnpm@7.4.0"
 }
