--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
       "~/*": ["src/*"]
     }
   },
-  "exclude": ["dist", "node_modules", "cypress"]
+  "exclude": ["dist", "node_modules", "**/*.cjs"]
 }
