--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "private": true,
   "scripts": {
     "build": "vite-ssg build",
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3333",
     "lint": "eslint .",
-    "serve": "vite preview",
-    "serve:https": "serve dist",
-    "typecheck": "vue-tsc --noEmit"
+    "serve": "vite preview"
   },
   "config": {
     "commitizen": {
@@ -14,37 +12,47 @@
       "czConfig": "./scripts/commitizen.cjs"
     }
   },
+  "eslintConfig": {
+    "extends": "@antfu"
+  },
   "dependencies": {
     "@vueuse/core": "^8.9.2",
     "@vueuse/head": "^0.7.6",
+    "dayjs": "^1.11.3",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.16",
     "prism-theme-vars": "^0.2.4",
     "vue": "^3.2.37",
-    "vue-demi": "^0.13.4",
-    "vue-i18n": "^9.1.10",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
     "@iconify-json/carbon": "^1.1.6",
-    "@intlify/vite-plugin-vue-i18n": "^4.0.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
+    "@unocss/reset": "^0.43.0",
     "@vitejs/plugin-vue": "^3.0.0",
     "@vue/test-utils": "^2.0.2",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "cz-git": "^1.3.9",
     "eslint": "^8.19.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "https-localhost": "^4.7.1",
+    "esno": "^0.16.3",
+    "fast-glob": "^3.2.11",
+    "feed": "^4.2.2",
+    "fs-extra": "^10.1.0",
+    "gray-matter": "^4.0.3",
+    "markdown-it-anchor": "^8.6.4",
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.4",
+    "markdown-it-table-of-contents": "^0.6.0",
+    "pathe": "^0.3.2",
     "pnpm": "^7.5.2",
+    "prismjs": "^1.28.0",
     "typescript": "^4.7.4",
     "unocss": "^0.44.2",
     "unplugin-auto-import": "^0.9.3",
+    "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^3.0.0",
     "vite-plugin-inspect": "^0.6.0",
@@ -52,9 +60,10 @@
     "vite-plugin-pwa": "^0.12.3",
     "vite-plugin-vue-layouts": "^0.6.0",
     "vite-plugin-vue-markdown": "^0.20.1",
+    "vite-plugin-yaml": "^1.0.5",
     "vite-ssg": "^0.20.2",
     "vite-ssg-sitemap": "^0.3.1",
-    "vue-tsc": "^0.38.5"
+    "vite-svg-loader": "^3.4.0"
   },
-  "packageManager": "pnpm@7.4.0"
+  "packageManager": "pnpm@7.5.2"
 }
