build: :books: deploy page 36165068e17ea6138239b82e7fff5d670203b99a

--- a/ssr-manifest.json
+++ b/ssr-manifest.json
@@ -1,41 +1,15 @@
 {
   "vite/modulepreload-polyfill": [],
-  "locales/ar.yml": [],
-  "locales/de.yml": [],
-  "locales/en.yml": [],
-  "locales/es.yml": [],
-  "locales/fr.yml": [],
-  "locales/id.yml": [],
-  "locales/it.yml": [],
-  "locales/ja.yml": [],
-  "locales/ko.yml": [],
-  "locales/pl.yml": [],
-  "locales/pt-BR.yml": [],
-  "locales/ru.yml": [],
-  "locales/tr.yml": [],
-  "locales/vi.yml": [],
-  "locales/zh-CN.yml": [],
-  "node_modules/.pnpm/@intlify+shared@9.1.10/node_modules/@intlify/shared/dist/shared.esm-bundler.js": [],
-  "node_modules/.pnpm/@intlify+message-resolver@9.1.10/node_modules/@intlify/message-resolver/dist/message-resolver.esm-bundler.js": [],
-  "node_modules/.pnpm/@intlify+runtime@9.1.10/node_modules/@intlify/runtime/dist/runtime.esm-bundler.js": [],
-  "node_modules/.pnpm/@intlify+message-compiler@9.1.10/node_modules/@intlify/message-compiler/dist/message-compiler.esm-bundler.js": [],
-  "node_modules/.pnpm/@intlify+devtools-if@9.1.10/node_modules/@intlify/devtools-if/dist/devtools-if.esm-bundler.js": [],
-  "node_modules/.pnpm/@intlify+core-base@9.1.10/node_modules/@intlify/core-base/dist/core-base.esm-bundler.js": [],
-  "node_modules/.pnpm/@vue+shared@3.2.37/node_modules/@vue/shared/dist/shared.esm-bundler.js": [],
-  "node_modules/.pnpm/@vue+reactivity@3.2.37/node_modules/@vue/reactivity/dist/reactivity.esm-bundler.js": [],
-  "node_modules/.pnpm/@vue+runtime-core@3.2.37/node_modules/@vue/runtime-core/dist/runtime-core.esm-bundler.js": [],
-  "node_modules/.pnpm/@vue+runtime-dom@3.2.37/node_modules/@vue/runtime-dom/dist/runtime-dom.esm-bundler.js": [],
-  "node_modules/.pnpm/vue-i18n@9.1.10_vue@3.2.37/node_modules/vue-i18n/dist/vue-i18n.runtime.esm-bundler.js": [],
-  "src/modules/i18n.ts": [],
   "\u0000commonjsHelpers.js": [],
   "\u0000/home/runner/work/zhengqbbb.github.io/zhengqbbb.github.io/node_modules/.pnpm/nprogress@0.2.0/node_modules/nprogress/nprogress.js?commonjs-module": [],
   "node_modules/.pnpm/nprogress@0.2.0/node_modules/nprogress/nprogress.js": [],
   "src/modules/nprogress.ts": [],
-  "node_modules/.pnpm/vue-demi@0.13.4_vue@3.2.37/node_modules/vue-demi/lib/index.mjs": [],
-  "node_modules/.pnpm/pinia@2.0.16_j6bzmzd4ujpabbp5objtwxyjp4/node_modules/pinia/dist/pinia.esm-browser.js": [],
-  "src/modules/pinia.ts": [],
   "\u0000vite/preload-helper": [],
   "src/modules/pwa.ts": [],
+  "node_modules/.pnpm/@vue+shared@3.2.37/node_modules/@vue/shared/dist/shared.esm-bundler.js": [],
+  "node_modules/.pnpm/@vue+reactivity@3.2.37/node_modules/@vue/reactivity/dist/reactivity.esm-bundler.js": [],
+  "node_modules/.pnpm/@vue+runtime-core@3.2.37/node_modules/@vue/runtime-core/dist/runtime-core.esm-bundler.js": [],
+  "node_modules/.pnpm/@vue+runtime-dom@3.2.37/node_modules/@vue/runtime-dom/dist/runtime-dom.esm-bundler.js": [],
   "node_modules/.pnpm/vue-router@4.1.2_vue@3.2.37/node_modules/vue-router/dist/vue-router.mjs": [],
   "node_modules/.pnpm/@vueuse+head@0.7.6_vue@3.2.37/node_modules/@vueuse/head/dist/index.mjs": [],
   "node_modules/.pnpm/vite-ssg@0.20.2_zodgg63wx4ia7g264h7fi3aaae/node_modules/vite-ssg/dist/chunks/state.mjs": [],
@@ -48,16 +22,20 @@
   "\u0000plugin-vue:export-helper": [],
   "src/layouts/default.vue": [],
   "../../../../../@vite-plugin-vue-layouts/generated-layouts": [],
+  "\u0000/home/runner/work/zhengqbbb.github.io/zhengqbbb.github.io/node_modules/.pnpm/dayjs@1.11.4/node_modules/dayjs/dayjs.min.js?commonjs-module": [],
+  "node_modules/.pnpm/dayjs@1.11.4/node_modules/dayjs/dayjs.min.js": [],
+  "src/utils/index.ts": [],
   "src/App.vue?vue&type=script&setup=true&lang.ts": [],
+  "pages/index.vue?vue&type=style&index=0&lang.css": [],
   "../../../../../@vite-plugin-pages/route-block": [],
-  "src/pages/index.vue": [],
+  "pages/index.vue": [],
   "../../../../../@vite-plugin-pages/generated-pages?id=~pages": [],
-  "node_modules/.pnpm/@unocss+reset@0.44.2/node_modules/@unocss/reset/tailwind.css": [],
+  "node_modules/.pnpm/@unocss+reset@0.43.2/node_modules/@unocss/reset/tailwind.css": [],
   "src/styles/main.css": [],
   "../../../../../__uno.css": [],
   "src/main.ts": [],
   "index.html": [],
-  "assets/app.ab804b70.js-unocss-hash.css": [],
+  "assets/app.9844b3b2.js-unocss-hash.css": [],
   "node_modules/.pnpm/workbox-window@6.5.3/node_modules/workbox-window/build/workbox-window.prod.es5.mjs": [
     "/assets/virtual_pwa-register.3ff79d29.js"
   ],
@@ -65,33 +43,24 @@
     "/assets/virtual_pwa-register.3ff79d29.js"
   ],
   "src/layouts/404.vue?vue&type=script&setup=true&lang.ts": [
-    "/assets/404.9602d6cb.js"
+    "/assets/404.033318fe.js"
   ],
   "src/layouts/404.vue": [
-    "/assets/404.9602d6cb.js"
+    "/assets/404.033318fe.js"
   ],
   "src/layouts/home.vue": [
-    "/assets/home.afbe76ba.js"
+    "/assets/home.6a9f8b2a.js"
   ],
-  "src/pages/README.md": [
-    "/assets/README.6a6d6bd5.js"
+  "pages/README.md": [
+    "/assets/README.ab15a9bd.js"
   ],
-  "src/pages/[...all].vue?vue&type=script&setup=true&lang.ts": [
-    "/assets/_...all_.d6c66fb8.js"
+  "pages/[...all].vue": [
+    "/assets/_...all_.4cd6f572.js"
   ],
-  "src/pages/[...all].vue": [
-    "/assets/_...all_.d6c66fb8.js"
+  "pages/about.md": [
+    "/assets/about.97f16c89.js"
   ],
-  "src/pages/about.md": [
-    "/assets/about.374f5530.js"
-  ],
-  "src/store/user.ts": [
-    "/assets/_name_.3ea8d588.js"
-  ],
-  "src/pages/hi/[name].vue?vue&type=script&setup=true&lang.ts": [
-    "/assets/_name_.3ea8d588.js"
-  ],
-  "src/pages/hi/[name].vue": [
-    "/assets/_name_.3ea8d588.js"
+  "pages/post/index.md": [
+    "/assets/index.f55e4fea.js"
   ]
 }
